introduced AEROSOL_TYPE enum
updated tests